finish oauth implementation, plus some fun extras ;)
